<resources>
    <string name="app_name">Feb8</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Gender">Gender</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="StartMonitoring">Start Monitoring</string>
    <string name="StopMonitoring">Stop Monitoring</string>
    <string name="DriveModeOn">Drive Mode On </string>
    <string name="DriveModeOff">Drive Mode Off </string>
    <string name="DriveMode">Drive Mode</string>
    <string name="DashboardLight">Number of times you used your phone in Dark</string>
    <string name="DashboardPosture">Number of times your posture was incorrect</string>
    <string name="DashboardDriveCalls">Number of times your phone rang while you were driving!</string>
    <string name="DashboardHandsFreeCalls">Number of times you received your calls in hands free mode!</string>
    <string name="ResetBtn">Reset Values</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="minutes">Time in Minutes :</string>
    <string name="StartTimer">Start Timer</string>
    <string name="zero">0</string>

    <string name="WelcomeToTimer">Your Personal Screen-time Tracker</string>
    <string name="timeKeeper">Timekeeper</string>

    <string name="DriveModeInfo"><b>Remember,</b> when Driving Mode is On, your Phone will <u>automatically enter silent mode </u>if
    an incoming call is detected!</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>