<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/Amazon"
    android:padding="3dp"
    tools:context=".TimerFragment">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="391dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/mintCream"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/timeKeeper"
        android:textColor="@color/hunterGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="378dp"
        android:layout_height="41dp"
        android:layout_marginTop="132dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/WelcomeToTimer"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="372dp"
        android:layout_height="357dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="172dp"
            android:fontFamily="casual"
            android:text="@string/minutes"
            android:textColor="#FAFAFA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvtimer"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_marginStart="156dp"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="84dp"
            android:clickable="true"
            android:elevation="6dp"
            android:src="@drawable/ic_newarrowup"
            app:backgroundTint="@color/crayolaGreen"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="84dp"
            android:clickable="true"
            android:src="@drawable/ic_newarrowdown"
            app:backgroundTint="@color/crayolaGreen"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIncrease" />

        <Button
            android:id="@+id/btnStartTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/StartTimer"
            app:icon="@color/crayolaGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvtimer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="384dp"
        android:layout_height="49dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="4dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>